Finalized colors on inbox item and fixed overflow for longer names

--- a/src/components/InboxItem/InboxItem.css
+++ b/src/components/InboxItem/InboxItem.css
@@ -9,7 +9,7 @@
     padding: 0.4em 1.2em 1.2em 1.2em;
     border-radius: 5px;
     gap: 2em;
-    border: 3px solid #39beff;
+    border: 3px solid #7dd4ff;
 }
 
 .item__logo {
